# BTC-LPTM-FeatureEngineering

./: .gitignore  README.md  run_readme_pipeline.py  stable_history.py
btc_liqprice_features_artifact/: README.md  __init__.py  cli_build_features.py  cli_visualize.py  config.py  execution_logger.py  feature_diagnostics.py  feature_liqprice.py  features.py  visualization.py
plie_pic_project/: README.md  __init__.py  feature_plie_pic.py  pyproject.toml  requirements.txt  run_pipeline.py
plie_pic_project/config/: config.yaml
plie_pic_project/docs/: algorithm.md  code_design.md  manual.md  plie_feature_engineering.md
plie_pic_project/models/: plie_pic_model.joblib  plie_pic_model_summary.json
plie_pic_project/outputs/checks/: post_training_leakage_checks.json
plie_pic_project/outputs/evaluation/: by_state_metrics.csv  by_transition_metrics.csv  conditional_subset_metrics.csv  decile_metrics.csv  latest_summary.json  model_coefficients.csv  monotonicity_metrics.csv  output_checks.csv  overall_metrics.csv  quantile_calibration_metrics.csv  retrain_monitoring.csv  rolling_latest_monitoring.csv  scheduled_retrain_decision.json  walk_forward_metrics.csv
plie_pic_project/outputs/predictions/: latest_agent_payload.json
plie_pic_project/reports/html/: index.html  model_evaluation.html
plie_pic_project/src/plie_pic/: __init__.py  cli.py  config.py  evaluation.py  features.py  inference.py  io.py  model.py  scheduler.py  streaming.py  train.py  utils.py  validation.py  visualization.py
plie_pic_project/tests/: test_features.py  test_io.py  test_no_future_leakage.py
(+415 files in other folders)
