[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plie-pic"
version = "0.1.0"
description = "Source-clock PLIE passive liquidation impact curve project"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "plotly>=5.0",
  "PyYAML>=6.0",
  "joblib>=1.2"
]

[tool.setuptools.packages.find]
where = ["src"]
